--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-description: "Thinking will not overcome fear but action will."
+description: "Better to run then curse the road."
 ---
 
 {% for post in paginator.posts %}
